# SyscallHider

./: .gitignore  CMakeLists.txt  README.md  asm.bat  scramble.py
include/: cmdline.hpp  parser.hpp  util.hpp
source/: cmdline.cpp  dllmain.cpp  inject.cpp  main.cpp  ntdll64ll.asm  parser.cpp  test.cpp  util.cpp
